done with basic auth, but not jwt and hashing yet

--- a/server/Confignure.ini
+++ b/server/Confignure.ini
@@ -1,2 +1,4 @@
 [paths]
-authdb = /databases/auth.db
+authdb = databases/auth.db
+private_key = assets/keys/private.pem
+public_key = assets/keys/public.pem
