--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/stack": "^7.4.8",
     "expo": "~54.0.10",
     "expo-camera": "~17.0.8",
+    "expo-media-library": "~18.2.0",
     "expo-secure-store": "~15.0.7",
     "expo-status-bar": "~3.0.8",
     "react": "19.1.0",
