--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@react-native-async-storage/async-storage": "2.2.0",
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/stack": "^7.4.8",
+    "@rnmapbox/maps": "^10.1.45",
     "expo": "~54.0.10",
     "expo-camera": "~17.0.8",
+    "expo-dev-client": "~6.0.13",
     "expo-media-library": "~18.2.0",
     "expo-secure-store": "~15.0.7",
     "expo-status-bar": "~3.0.8",
