--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@react-navigation/stack": "^7.4.8",
     "@rnmapbox/maps": "^10.1.45",
     "expo": "~54.0.10",
-    "expo-camera": "~17.0.8",
+    "expo-camera": "^17.0.8",
     "expo-dev-client": "~6.0.13",
     "expo-media-library": "~18.2.0",
     "expo-screen-orientation": "~9.0.7",
