--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "expo": "^54.0.21",
     "expo-camera": "~17.0.8",
     "expo-dev-client": "~6.0.16",
+    "expo-linking": "~8.0.10",
     "expo-location": "~19.0.7",
     "expo-media-library": "~18.2.0",
     "expo-screen-orientation": "~9.0.7",
