--- a/package.json
+++ b/package.json
@@ -36,12 +36,15 @@
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
+    "react-native-video": "^6.18.0",
     "react-native-web": "^0.21.0",
     "react-native-worklets": "0.5.1"
   },
   "devDependencies": {
     "@expo/cli": "^54.0.14",
-    "react-native-dotenv": "^3.4.11"
+    "@types/react": "~19.1.10",
+    "react-native-dotenv": "^3.4.11",
+    "typescript": "~5.9.2"
   },
   "private": true
 }
