--- a/eas.json
+++ b/eas.json
@@ -11,7 +11,11 @@
       "distribution": "internal"
     },
     "production": {
-      "distribution": "store"
+      "distribution": "store",
+      "autoIncrement": true
     }
+  },
+  "submit": {
+    "production": {}
   }
 }
