--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "@gorhom/bottom-sheet": "^5.2.6",
     "@react-native-async-storage/async-storage": "2.2.0",
+    "@react-native-community/slider": "5.0.1",
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/stack": "^7.4.8",
     "@rnmapbox/maps": "10.1.45",
+    "events": "^3.3.0",
     "expo": "~54.0.30",
     "expo-camera": "~17.0.10",
     "expo-dev-client": "~6.0.20",
