--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "expo-status-bar": "~3.0.9",
     "expo-task-manager": "~14.0.9",
     "expo-video-thumbnails": "~10.0.8",
+    "jose": "^6.1.3",
     "node": "^25.4.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
