--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "events": "^3.3.0",
     "expo": "~54.0.33",
     "expo-camera": "~17.0.10",
+    "expo-crypto": "^15.0.8",
     "expo-dev-client": "~6.0.20",
     "expo-file-system": "~19.0.21",
     "expo-image-picker": "~17.0.10",
@@ -28,10 +29,12 @@
     "expo-secure-store": "~15.0.8",
     "expo-sensors": "~15.0.8",
     "expo-sqlite": "~16.0.10",
+    "expo-standard-web-crypto": "^3.0.8",
     "expo-status-bar": "~3.0.9",
     "expo-task-manager": "~14.0.9",
     "expo-video-thumbnails": "~10.0.8",
     "jose": "^6.1.3",
+    "jwt-decode": "^4.0.0",
     "node": "^25.4.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
