--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@rnmapbox/maps": "10.1.45",
     "events": "^3.3.0",
     "expo": "~54.0.33",
+    "expo-audio": "~1.1.1",
     "expo-camera": "~17.0.10",
     "expo-crypto": "^15.0.8",
     "expo-dev-client": "~6.0.20",
