--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/stack": "^7.4.8",
     "@rnmapbox/maps": "10.1.45",
+    "@shopify/react-native-skia": "2.2.12",
     "events": "^3.3.0",
     "expo": "~54.0.33",
     "expo-audio": "~1.1.1",
+    "expo-av": "~16.0.8",
     "expo-camera": "~17.0.10",
     "expo-crypto": "^15.0.8",
     "expo-dev-client": "~6.0.20",
