--- a/package.json
+++ b/package.json
@@ -50,7 +50,8 @@
     "react-native-video": "^6.18.0",
     "react-native-vision-camera": "^4.7.3",
     "react-native-web": "^0.21.0",
-    "react-native-worklets": "0.5.1"
+    "react-native-worklets": "0.5.1",
+    "react-native-worklets-core": "^1.6.3"
   },
   "devDependencies": {
     "@expo/cli": "^54.0.14",
